--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+body{
+    line-height: 1.5;
+    min-height: 100vh;
+}
+
 .attribution {
     font-size: 11px;
     text-align: center;
