--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@
 body{
     line-height: 1.5;
     min-height: 100vh;
+    display: flex;
+    align-items: center;
+    /* justify-content: center; */
+    flex-direction: column;
 }
 
 header{
