Made changes to the html and css file

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
     font-family: 'Poppins', sans-serif;
 }
 
-body {
+/* body {
     line-height: 1.5;
     min-height: 100vh;
     display: flex;
@@ -39,7 +39,7 @@ header {
     --GrayishBlue: hsl(208, 11%, 55%);
     --Pink: hsl(322, 100%, 66%);
 }
-
+ */
 
 
 
